force-app/main/default/objects/Country__mdt/fields/Country_code__c.field-meta.xml
<CustomField>
    <fullName>Country_code__c</fullName>
    <label>Country code alpha2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>