force-app/main/default/objects/Country__mdt/fields/Country_code_alpha3__c.field-meta.xml
<CustomField>
    <fullName>Country_code_alpha3__c</fullName>
    <label>Country code alpha3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>