force-app/main/default/objects/Country__mdt/fields/deleted__c.field-meta.xml
<CustomField>
    <fullName>deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>deleted</label>
    <type>Checkbox</type>
</CustomField>