force-app/main/default/objects/Country__mdt/fields/is_in_europe__c.field-meta.xml
<CustomField>
    <fullName>is_in_europe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_in_europe</label>
    <type>Checkbox</type>
</CustomField>