force-app/main/default/objects/Country__mdt/fields/member_country__c.field-meta.xml
<CustomField>
    <fullName>member_country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>member_country</label>
    <type>Checkbox</type>
</CustomField>